--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PAAPI_ACCESS_KEY=AKPASN4UWZ1755752953
-PAAPI_SECRET_KEY=hh7pEov9y3ZwCewO7sxcgjEjBKvMRbN3zAh+WA/0
-PAAPI_PARTNER_TAG=amaado11-22
+PAAPI_ACCESS_KEY=
+PAAPI_SECRET_KEY=
+PAAPI_PARTNER_TAG=
 ALLOWED_ORIGIN=https://amaado.net   # 後であなたの公開ドメインに差し替え
 PORT=10000
